# RocketQL

./: .env.secret  .gitignore  Cargo.toml
.docker/: docker-compose.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
src/: main.rs
src/config/: mongo.rs
src/handler/: graphql_handler.rs
src/schema/: project_schema.rs
