[package]
name = "RocketQL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
async-graphql = {version = "4.0.16", features = ["bson", "chrono"]}
async-graphql-rocket = "4.0.16"
serde = "1.0.147"
dotenv = "0.15.0"
mongodb = {version = "2.3.1", default_features = false, features = ["sync"]}